force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <description>Standard Salesforce Case object extended with custom fields for AI-Assisted Case Management System. Manages vehicle rental customer support cases across multiple channels.</description>
</CustomObject>