force-app/main/default/objects/Case/fields/AI_Assistance_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Assistance_Status__c</fullName>
    <description>Status tracking AI suggestion lifecycle (Pending, Suggested, Approved, Edited, Restricted, Escalated).</description>
    <label>AI Assistance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Suggested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Edited</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>