force-app/main/default/objects/Case/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <description>Confidence score (0.00 to 1.00) produced by AI intent classification.</description>
    <label>AI Confidence</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>