force-app/main/default/objects/Case/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <description>External reservation/booking reference number provided by customer (e.g., BK1001).</description>
    <externalId>true</externalId>
    <label>Booking Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>