force-app/main/default/objects/Case/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <description>Status of reservation retrieved asynchronously from external Mock Booking API.</description>
    <label>Booking Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>