force-app/main/default/objects/Case/fields/Case_Intent__c.field-meta.xml
<CustomField>
    <fullName>Case_Intent__c</fullName>
    <description>AI-classified or agent-assigned primary customer intent category.</description>
    <label>Case Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Breakdown</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Booking Change</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
                <default>true</default>
                <label>General Enquiry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>