force-app/main/default/objects/Case/fields/Customer_Channel__c.field-meta.xml
<CustomField>
    <fullName>Customer_Channel__c</fullName>
    <description>The multi-channel intake source for the case (Email, Chat, WhatsApp, Web).</description>
    <label>Customer Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>