force-app/main/default/objects/Case/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Payment state of the rental booking retrieved from the external Mock Booking API (e.g., Paid, Pending Deposit, Refunded).</description>
    <label>Payment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>