force-app/main/default/objects/Case/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <description>Rental pickup branch or location retrieved from the external Mock Booking API.</description>
    <label>Pickup Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>