force-app/main/default/objects/Case/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <description>Fictional car rental supplier partner name (Demo Rental Services, CityDrive Rentals, Example Mobility).</description>
    <label>Supplier Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>