force-app/main/default/objects/Case/fields/Vehicle_Class__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Class__c</fullName>
    <description>Vehicle category associated with the rental booking (e.g., Economy SUV, Compact Hatchback).</description>
    <label>Vehicle Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>